# davinci-resolve-mcp

./: .cursorrules  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  WARP_QUICK_REFERENCE.md  pyproject.toml  pytest.ini  requirements.txt  run-now.bat  run-now.sh  test_connection_diagnostic.py  test_full_import.py  test_server_logic.py
.github/workflows/: ci.yml
config/: README.md  cursor-mcp-example.json
config/macos/: claude-desktop-config.template.json  cursor-mcp-config.template.json
config/windows/: claude-desktop-config.template.json  cursor-mcp-config.template.json
docs/: AUDIT.md  PHASE4_ENVELOPE_PLAN.md
examples/: getting_started.py
examples/markers/: add_spaced_markers.py  add_timecode_marker.py  alternating_markers.py  clear_add_markers.py  test_marker_frames.py
examples/media/: import_folder.py
examples/timeline/: timeline_check.py  timeline_info.py
scripts/: README.md  check-resolve-ready.bat  check-resolve-ready.sh  mcp_resolve-claude_start  run-server.sh  setup.sh
scripts/setup/: install.bat  install.sh
src/: main.py  resolve_mcp_server.py
src/api/: fusion_operations.py  timeline_operations.py
src/davinci_resolve_mcp/: __init__.py  __main__.py  context.py  server.py
tests/: conftest.py  test_custom_timeline.py  test_improvements.py
tests/unit/: test_color_operations.py  test_delivery_operations.py  test_envelope_contract.py  test_execute_python_gate.py  test_fusion_operations.py  test_helper_failures.py  test_media_operations.py  test_project_operations.py  test_resolve_adapter.py  test_response_envelope.py  test_tool_parity.py  (+2 more)
(+34 files in other folders)
