[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "davinci-resolve-mcp"
version = "1.3.8"
description = "MCP server integration for DaVinci Resolve"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "jsonrpcserver>=5.0.0",
]

[project.scripts]
davinci-resolve-mcp = "davinci_resolve_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["davinci_resolve_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # pyflakes — catches real bugs (undefined names, unused vars)
    "E722",  # bare except — catches bugs that hide real errors
]
ignore = [
    "F401",  # unused imports — too many to fix at once; Phase 4
    "F541",  # f-string without placeholders — cosmetic; Phase 4
    "F841",  # unused variable — few instances; Phase 4
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F"]
"scripts/*" = ["F"]
"examples/*" = ["F"]
